<resources>
    <string name="app_name">Sports Bet App</string>
    <string name="login">Giriş Yap</string>
    <string name="LOGIN">GİRİŞ YAP</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="e_mail_address">E-Posta Adresi</string>
    <string name="password">Şifre</string>
    <string name="become_member_now">HEMEN ÜYE OL</string>
    <string name="not_a_member">Henüz %1s\'e üye değilsen.</string>
    <string name="please_do_not_leave_empty">Lütfen boş bırakmayınız.</string>
    <string name="please_enter_valid_e_mail">Lütfen Geçerli bir e-posta adresi girin.</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="main_page">Ana Sayfa</string>
    <string name="profile">Profil</string>
    <string name="bet_amount">Kupon Bedeli</string>
    <string name="maximum_win">Maks. Kazanç</string>
    <string name="total_odds">Toplam Oran</string>
    <string name="log_out">Çıkış</string>
</resources>