<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.auth.LoginFragment"
    android:background="@color/viewBackgroundColor">


    <com.tutar.sportsbetapp.presentation.ui.components.DefaultTextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.SportsBetApp.DefaultInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_medium"
        app:errorEnabled="false"
        app:boxBackgroundMode="none"
        android:hint="@string/e_mail_address">

        <com.tutar.sportsbetapp.presentation.ui.components.DefaultEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_small"/>
    </com.tutar.sportsbetapp.presentation.ui.components.DefaultTextInputLayout>

    <com.tutar.sportsbetapp.presentation.ui.components.DefaultTextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.SportsBetApp.DefaultInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:layout_marginHorizontal="@dimen/space_small"
        android:layout_marginTop="@dimen/space_medium"
        app:errorEnabled="false"
        app:boxBackgroundMode="none"
        android:hint="@string/password">

        <com.tutar.sportsbetapp.presentation.ui.components.DefaultEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_small"/>

    </com.tutar.sportsbetapp.presentation.ui.components.DefaultTextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginTop="@dimen/space_xxmedium"
        android:layout_marginHorizontal="@dimen/space_medium"
        android:text="@string/LOGIN"
        android:textColor="@color/btn_text_selector"
        android:paddingVertical="@dimen/space_medium"
        android:backgroundTint="@color/btn_background_selector"
        android:enabled="false"/>

    <TextView
        android:id="@+id/tvNotMemberYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvBecomeMemberNow"
        tools:text="Henüz Sports Bet App'e üye değilsen"/>

    <TextView
        android:id="@+id/tvBecomeMemberNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/space_xxmedium"
        android:text="@string/become_member_now"
        android:textStyle="bold"
        android:textColor="@color/textBtnColor"
        />


</androidx.constraintlayout.widget.ConstraintLayout>